-- チャンネル (Channels) テーブル:
CREATE TABLE Channels (
    チャンネルID INT PRIMARY KEY AUTO_INCREMENT,
    チャンネル名 VARCHAR(100) NOT NULL,
    チャンネル概要 TEXT
);


-- チャンネルと番組枠の関連付けを行うテーブル (Channels_Slots):
CREATE TABLE Channels_Slots (
    チャンネルID INT NOT NULL,
    番組枠ID INT NOT NULL,
    PRIMARY KEY (チャンネルID, 番組枠ID)
);

-- 番組枠 (Slots) テーブル:
CREATE TABLE Slots (
    番組枠ID INT PRIMARY KEY AUTO_INCREMENT,
    日時_番組開始時刻 DATETIME NOT NULL,
    日時_番組終了時刻 DATETIME NOT NULL,
    番組枠再生数 INT DEFAULT 0,

    番組ID INT NOT NULL,
    エピソードID INT NOT NULL
);

-- 番組 (Programs) テーブル:
CREATE TABLE Programs (
    番組ID INT PRIMARY KEY AUTO_INCREMENT,
    番組名 VARCHAR(255) NOT NULL,
    総シーズン数 INT NOT NULL,
    総エピソード数 INT NOT NULL,
    番組詳細 TEXT,
    番組再生数 INT DEFAULT 0
);

-- エピソード (Episodes) テーブル:
CREATE TABLE Episodes (
    エピソードID INT PRIMARY KEY AUTO_INCREMENT,
    エピソード名 VARCHAR(255) NOT NULL,
    エピソード番号 VARCHAR(50) ,
    エピソード詳細 TEXT,
    シーズン名 VARCHAR(255),
    動画時間 TIME,
    公開日 DATE,
    エピソード再生数 INT DEFAULT 0,

    番組ID INT NOT NULL
);


-- 番組とジャンルの関連付けを行うテーブル (Programs_Genres):
CREATE TABLE Programs_Genres (
    番組ID INT NOT NULL,
    ジャンルID INT NOT NULL,
    PRIMARY KEY (番組ID, ジャンルID)
);

-- ジャンル (Genres) テーブル:
CREATE TABLE Genres (
    ジャンルID INT PRIMARY KEY AUTO_INCREMENT,
    ジャンル名 VARCHAR(100)
);


-- 外部キー追加

ALTER TABLE Channels_Slots ADD(
    FOREIGN KEY fk_chanslo_chan(チャンネルID) REFERENCES Channels(チャンネルID),
    FOREIGN KEY fk_chanslo_slo(番組枠ID) REFERENCES Slots(番組枠ID));

ALTER TABLE Slots ADD(
    FOREIGN KEY fk_slo_pro(番組ID) REFERENCES Programs(番組ID),
    FOREIGN KEY fk_slo_epi(エピソードID) REFERENCES Episodes(エピソードID));

ALTER TABLE Programs_Genres ADD(
    FOREIGN KEY fk_progen_pro(番組ID) REFERENCES Programs(番組ID),
    FOREIGN KEY fk_progen_gen(ジャンルID) REFERENCES Genres(ジャンルID));

ALTER TABLE Episodes ADD
    FOREIGN KEY fk_epi_pro(番組ID) REFERENCES Programs(番組ID);

--ALTER table episodes rename column 番号ID TO 番組ID;

----insert
-- Channels テーブルにサンプルデータを挿入
INSERT INTO Channels (チャンネル名, チャンネル概要)
VALUES
    ('NKK', 'NKKニュース'),
    ('大日本帝国放送', '大日本帝国の説明'),
    ('テレ昼', 'テレ昼の説明'),
    ('TAS', 'TASの説明'),
    ('不死テレ', '不死テレの説明'),
    ('テレ京', 'テレ京の説明'),
    ('BS11', 'BS11の説明'),
    ('WWW', 'WWWの説明'),
    ('BS日', 'BS日の説明'),
    ('BSA', 'BSAの説明')
    ;

-- Genres テーブルにサンプルデータを挿入
INSERT INTO Genres (ジャンル名)
VALUES
    ('アクション'),
    ('スポーツ'),
    ('ドラマ'),
    ('コメディ'),
    ('アニメ'),
    ('映画'),
    ('ニュース'),
    ('音楽'),
    ('バラエティ'),
    ('教育'),
    ('ドキュメンタリー'),
    ('ホラー'),
    ('SF'),
    ('ファンタジー'),
    ('冒険'),
    ('ロマンス'),
    ('歴史'),
    ('西部劇'),
    ('スパイ'),
    ('ミステリー')
    ;

/* -- Programs テーブルにサンプルデータを挿入
INSERT INTO Programs (番組名, 総シーズン数, 総エピソード数, 番組詳細, 番組再生数)
VALUES
    ('鬼滅の刃', 1, 26, '鬼滅の刃の詳細', 100000),
    ('サッカー代表戦', 1, 1, 'サッカー代表戦の詳細', 50000),
    ('ドラマA', 2, 20, 'ドラマAの詳細', 80000),
    ('映画B', 1, 1, '映画Bの詳細', 30000)
    ;
-- Episodes テーブルにサンプルデータを挿入
INSERT INTO Episodes (エピソード名, エピソード番号, エピソード詳細, シーズン名,  動画時間, 公開日, エピソード再生数,番組ID)
VALUES
    ('鬼滅の刃 エピソード1', '第1話', '鬼滅の刃 エピソード1の詳細', 'シーズン1', '00:24:00', '2023-11-07', 20000, 1),
    ('日本vsイタリア', NULL, '日本vsイタリアの詳細', NULL, '02:00:00', '2023-11-08', 15000, 2),
    ('ドラマA エピソード1', '第1話', 'ドラマA エピソード1の詳細', 'シーズン1', '00:45:00', '2023-11-09', 18000, 3),
    ('映画B', NULL, '映画Bの詳細', NULL, '01:30:00', '2023-11-10', 12000, 4)
    ;


-- Slots テーブルにサンプルデータを挿入
INSERT INTO Slots (日時_番組開始時刻, 日時_番組終了時刻, 番組ID, エピソードID)
VALUES
    ('2023-11-07 08:00:00', '2023-11-07 09:00:00', 1, 1),
    ('2023-11-07 10:30:00', '2023-11-07 11:30:00', 2, 2),
    ('2023-11-09 22:00:00', '2023-11-09 23:00:00', 3, 3),
    ('2023-11-10 20:00:00', '2023-11-09 22:00:00', 4, 4)
    ;


-- 中間テーブル
-- Programs_Genres テーブルにサンプルデータを挿入
INSERT INTO Programs_Genres (番組ID, ジャンルID)
VALUES
    (1, 1),
    (2, 2),
    (3, 3),
    (4, 6)
    ;

-- Channels_Slots テーブルにサンプルデータを挿入
INSERT INTO Channels_Slots (チャンネルID, 番組枠ID)
VALUES
    (5, 1),
    (2, 2),
    (3, 3),
    (6, 4)
    ; */




--外部キーは多から一の方につける 一から多の方向にはつけない
--データ挿入の順番は一側から、中間テーブルは最後




INSERT INTO Programs (番組名, 総シーズン数, 総エピソード数, 番組詳細, 番組再生数)
VALUES
    ('鬼滅の刃', 1, 26, '鬼滅の刃の詳細', 100000),
    ('サッカー代表戦', 1, 1, 'サッカー代表戦の詳細', 50000),
    ('ドラマA', 2, 20, 'ドラマAの詳細', 80000),
    ('映画B', 1, 1, '映画Bの詳細', 30000),
    ('番組Θ', 2, 24, '番組Θの詳細', 50000),
    ('番組α', 2, 24, '番組αの詳細', 30000),
    ('番組β', 2, 24, '番組βの詳細', 70000),
    ('番組γ', 2, 24, '番組γの詳細', 40000),
    ('番組η', 2, 24, '番組ηの詳細', 60000),
    ('番組λ', 2, 24, '番組λの詳細', 20000),
    ('番組π', 2, 24, '番組πの詳細', 80000),
    ('番組ε', 2, 24, '番組εの詳細', 55000),
    ('番組ω', 2, 24, '番組ωの詳細', 33000),
    ('番組δ', 2, 24, '番組δの詳細', 77000),
    ('番組A', 5, 50, '番組Aの詳細', 50000),
    ('番組B', 3, 30, '番組Bの詳細', 30000),
    ('番組C', 7, 70, '番組Cの詳細', 70000),
    ('番組D', 4, 40, '番組Dの詳細', 40000),
    ('番組E', 6, 60, '番組Eの詳細', 60000),
    ('番組F', 2, 20, '番組Fの詳細', 20000),
    ('番組G', 8, 80, '番組Gの詳細', 80000),
    ('番組H', 5, 50, '番組Hの詳細', 55000),
    ('番組I', 3, 30, '番組Iの詳細', 33000),
    ('番組J', 7, 70, '番組Jの詳細', 77000),
    ('番組K', 6, 60, '番組Kの詳細', 66000),
    ('番組L', 4, 40, '番組Lの詳細', 44000),
    ('番組M', 8, 80, '番組Mの詳細', 88000),
    ('番組N', 5, 50, '番組Nの詳細', 55000),
    ('番組O', 3, 30, '番組Oの詳細', 33000),
    ('番組P', 7, 70, '番組Pの詳細', 77000),
    ('番組Q', 6, 60, '番組Qの詳細', 66000),
    ('番組R', 4, 40, '番組Rの詳細', 44000),
    ('番組S', 8, 80, '番組Sの詳細', 88000),
    ('番組T', 5, 50, '番組Tの詳細', 55000),
    ('番組U', 6, 60, '番組Uの詳細', 66000),
    ('番組V', 4, 40, '番組Vの詳細', 44000),
    ('番組W', 8, 80, '番組Wの詳細', 88000),
    ('番組X', 5, 50, '番組Xの詳細', 55000),
    ('番組Y', 3, 30, '番組Yの詳細', 33000),
    ('番組Z', 7, 70, '番組Zの詳細', 77000),
    ('番組AA', 6, 60, '番組AAの詳細', 66000),
    ('番組BB', 4, 40, '番組BBの詳細', 44000),
    ('番組CC', 8, 80, '番組CCの詳細', 88000),
    ('番組DD', 5, 50, '番組DDの詳細', 55000),
    ('番組EE', 6, 60, '番組EEの詳細', 66000),
    ('番組FF', 4, 40, '番組FFの詳細', 44000),
    ('番組GG', 8, 80, '番組GGの詳細', 88000),
    ('番組HH', 5, 50, '番組HHの詳細', 55000),
    ('番組II', 3, 30, '番組IIの詳細', 33000),
    ('番組JJ', 7, 70, '番組JJの詳細', 77000),
    ('番組KK', 6, 60, '番組KKの詳細', 66000),
    ('番組LL', 4, 40, '番組LLの詳細', 44000),
    ('番組MM', 8, 80, '番組MMの詳細', 88000),
    ('番組NN', 5, 50, '番組NNの詳細', 55000);


-- EPISODES テーブルに50個のサンプルデータを挿入（エピソード番号は11から始まる）
INSERT INTO Episodes (エピソード名, エピソード番号, エピソード詳細, シーズン名, 動画時間, 公開日, エピソード再生数, 番組ID)
VALUES
    ('鬼滅の刃 エピソード1', '第1話', '鬼滅の刃 エピソード1の詳細', 'シーズン1', '00:24:00', '2023-11-07', 20000, 1),
    ('日本vsイタリア', NULL, '日本vsイタリアの詳細', NULL, '02:00:00', '2023-11-08', 15000, 2),
    ('ドラマA エピソード1', '第1話', 'ドラマA エピソード1の詳細', 'シーズン1', '00:45:00', '2023-11-09', 18000, 3),
    ('映画B', NULL, '映画Bの詳細', NULL, '01:30:00', '2023-11-10', 12000, 4),
    ('鬼滅の刃 エピソード 2', '第2話', 'エピソード2の詳細', 'シーズン1', '00:24:00', '2023-11-08', 15000, 1),
    ('鬼滅の刃 エピソード 3', '第3話', 'エピソード3の詳細', 'シーズン1', '00:24:00', '2023-11-09', 18000, 1),
    ('鬼滅の刃 エピソード 4', '第4話', 'エピソード4の詳細', 'シーズン1', '00:24:00', '2023-11-10', 22000, 1),
    ('鬼滅の刃 エピソード 5', '第5話', 'エピソード5の詳細', 'シーズン1', '00:24:00', '2023-11-11', 17000, 1),
    ('鬼滅の刃 エピソード 6', '第6話', 'エピソード6の詳細', 'シーズン1', '00:24:00', '2023-11-12', 24000, 1),
    ('鬼滅の刃 エピソード 7', '第7話', 'エピソード7の詳細', 'シーズン1', '00:24:00', '2023-11-13', 19000, 1),
    ('鬼滅の刃 エピソード 8', '第8話', 'エピソード8の詳細', 'シーズン1', '00:24:00', '2023-11-14', 21000, 1),
    ('鬼滅の刃 エピソード 9', '第9話', 'エピソード9の詳細', 'シーズン1', '00:24:00', '2023-11-15', 23000, 1),
    ('鬼滅の刃 エピソード 10', '第10話', 'エピソード10の詳細', 'シーズン1', '00:24:00', '2023-11-16', 12300, 1),
    ('エピソード K', '第21話', 'エピソードKの詳細', 'シーズン1', '00:30:00', '2023-11-10', 20000, 5),
    ('エピソード L', '第43話', 'エピソードLの詳細', 'シーズン1', '00:28:00', '2023-11-11', 15000, 5),
    ('エピソード M', '第56話', 'エピソードMの詳細', 'シーズン2', '00:35:00', '2023-11-11', 18000, 6),
    ('エピソード O', '第66話', 'エピソードOの詳細', 'シーズン2', '00:32:00', '2023-11-12', 22000, 6),
    ('エピソード P', '第34話', 'エピソードPの詳細', 'シーズン3', '00:40:00', '2023-11-09', 17000,7),
    ('エピソード Q', '第34話', 'エピソードQの詳細', 'シーズン3', '00:35:00', '2023-11-10', 24000,7),
    ('エピソード R', '第44話', 'エピソードRの詳細', 'シーズン4', '00:28:00', '2023-11-14', 19000,8),
    ('エピソード S', '第54話', 'エピソードSの詳細', 'シーズン4', '00:30:00', '2023-11-14', 21000,8),
    ('エピソード T', '第19話', 'エピソードTの詳細', 'シーズン5', '00:45:00', '2023-11-25', 23000,9),
    ('エピソード U', '第44話', 'エピソードUの詳細', 'シーズン5', '00:38:00', '2023-11-26', 26000,9),
    ('エピソード V', '第24話', 'エピソードVの詳細', 'シーズン1', '00:30:00', '2023-11-27', 20000,10),
    ('エピソード W', '第42話', 'エピソードWの詳細', 'シーズン1', '00:28:00', '2023-11-28', 15000,10),
    ('エピソード X', '第24話', 'エピソードXの詳細', 'シーズン2', '00:35:00', '2023-11-29', 18000,11),
    ('エピソード Y', '第24話', 'エピソードYの詳細', 'シーズン2', '00:32:00', '2023-11-30', 22000,11),
    ('エピソード Z', '第44話', 'エピソードZの詳細', 'シーズン3', '00:40:00', '2023-12-01', 17000,12),
    ('エピソード AA', '第24話', 'エピソードAAの詳細', 'シーズン3', '00:35:00', '2023-12-02', 34000, 12),
    ('エピソード BB', '第25話', 'エピソードBBの詳細', 'シーズン4', '00:28:00', '2023-12-03', 19000, 13),
    ('エピソード CC', '第28話', 'エピソードCCの詳細', 'シーズン4', '00:30:00', '2023-12-04', 21000, 13),
    ('エピソード DD', '第82話', 'エピソードDDの詳細', 'シーズン5', '00:45:00', '2023-12-05', 23000, 14),
    ('エピソード EE', '第34話', 'エピソードEEの詳細', 'シーズン5', '00:38:00', '2023-12-06', 44000, 14),
    ('エピソード FF', '第31話', 'エピソードFFの詳細', 'シーズン1', '00:30:00', '2023-12-07', 20000, 15),
    ('エピソード GG', '第12話', 'エピソードGGの詳細', 'シーズン1', '00:28:00', '2023-12-08', 15000, 15),
    ('エピソード HH', '第33話', 'エピソードHHの詳細', 'シーズン2', '00:35:00', '2023-12-09', 18000, 16),
    ('エピソード II', '第14話', 'エピソードIIの詳細', 'シーズン2', '00:32:00', '2023-12-10', 22000, 16),
    ('エピソード JJ', '第34話', 'エピソードJJの詳細', 'シーズン3', '00:40:00', '2023-12-11', 17000, 17),
    ('エピソード KK', '第33話', 'エピソードKKの詳細', 'シーズン3', '00:35:00', '2023-12-12', 43000, 17),
    ('エピソード LL', '第34話', 'エピソードLLの詳細', 'シーズン4', '00:28:00', '2023-12-13', 19000, 17),
    ('エピソード MM', '第34話', 'エピソードMMの詳細', 'シーズン4', '00:30:00', '2023-12-14', 31000, 17),
    ('エピソード OO', '第35話', 'エピソードOOの詳細', 'シーズン5', '00:45:00', '2023-12-15', 23000, 18),
    ('エピソード PP', '第45話', 'エピソードPPの詳細', 'シーズン5', '00:38:00', '2023-12-16', 26000, 18),
    ('エピソードA', '第21話', 'エピソードAの詳細', 'シーズン1', '00:30:00', '2023-12-07', 20000,19),
    ('エピソードB', '第34話', 'エピソードBの詳細', 'シーズン1', '00:28:00', '2023-12-08', 15000,19),
    ('エピソードC', '第38話', 'エピソードCの詳細', 'シーズン2', '00:35:00', '2023-12-09', 18000,20),
    ('エピソードD', '第88話', 'エピソードDの詳細', 'シーズン2', '00:32:00', '2023-12-10', 22000,20),
    ('エピソードE', '第99話', 'エピソードEの詳細', 'シーズン3', '00:40:00', '2023-12-11', 17000,21),
    ('エピソードF', '第36話', 'エピソードFの詳細', 'シーズン3', '00:35:00', '2023-12-12', 24000,21),
    ('エピソードG', '第36話', 'エピソードGの詳細', 'シーズン4', '00:28:00', '2023-12-13', 19000,22),
    ('エピソードH', '第38話', 'エピソードHの詳細', 'シーズン4', '00:30:00', '2023-12-14', 21000,22),
    ('エピソードI', '第66話', 'エピソードIの詳細', 'シーズン5', '00:45:00', '2023-12-15', 23000,23),
    ('エピソードJ', '第46話', 'エピソードJの詳細', 'シーズン5', '00:38:00', '2023-12-16', 26000,23)
    ;


INSERT INTO Slots (日時_番組開始時刻, 日時_番組終了時刻, 番組ID, エピソードID)
VALUES
    ('2023-11-07 08:00:00', '2023-11-07 09:00:00', 1, 1),
    ('2023-11-07 10:30:00', '2023-11-07 11:30:00', 2, 2),
    ('2023-11-09 22:00:00', '2023-11-09 23:00:00', 3, 3),
    ('2023-11-10 20:00:00', '2023-11-09 22:00:00', 4, 4),
    ('2023-11-07 14:00:00', '2023-11-07 15:00:00', 1, 5),
    ('2023-11-07 16:30:00', '2023-11-07 17:30:00', 1, 6),
    ('2023-11-09 20:00:00', '2023-11-09 21:00:00', 1, 7),
    ('2023-11-10 10:00:00', '2023-11-10 12:00:00', 1, 8),
    ('2023-11-12 08:00:00', '2023-11-12 09:30:00', 1, 9),
    ('2023-11-12 14:00:00', '2023-11-12 15:30:00', 1, 10),
    ('2023-11-14 19:00:00', '2023-11-14 20:00:00', 1, 11),
    ('2023-11-15 15:00:00', '2023-11-15 17:00:00', 1, 12),
    ('2023-11-16 12:00:00', '2023-11-16 13:30:00', 1, 13),
    ('2023-11-17 09:00:00', '2023-11-17 10:30:00', 14, 5),
    ('2023-11-18 08:00:00', '2023-11-18 09:00:00', 15, 5),
    ('2023-11-19 10:30:00', '2023-11-19 11:30:00', 16, 6),
    ('2023-11-20 22:00:00', '2023-11-20 23:00:00', 17, 6),
    ('2023-11-21 20:00:00', '2023-11-21 21:00:00', 18, 7),
    ('2023-11-22 16:00:00', '2023-11-22 17:30:00', 19, 7),
    ('2023-11-23 14:00:00', '2023-11-23 15:30:00', 20, 8),
    ('2023-11-24 18:00:00', '2023-11-24 19:00:00', 21, 8),
    ('2023-11-25 14:30:00', '2023-11-25 16:00:00', 22, 9),
    ('2023-11-26 12:00:00', '2023-11-26 13:30:00', 23, 9),
    ('2023-11-27 09:00:00', '2023-11-27 10:30:00', 24, 10),
    ('2023-11-28 08:00:00', '2023-11-28 09:00:00', 25, 10),
    ('2023-11-29 10:30:00', '2023-11-29 11:30:00', 26, 11),
    ('2023-11-30 22:00:00', '2023-11-30 23:00:00', 27, 11),
    ('2023-12-01 20:00:00', '2023-12-01 21:00:00', 28, 12),
    ('2023-12-02 16:00:00', '2023-12-02 17:30:00', 29, 12),
    ('2023-12-03 14:00:00', '2023-12-03 15:30:00', 30, 13),
    ('2023-12-04 18:00:00', '2023-12-04 19:00:00', 31, 13),
    ('2023-12-05 14:30:00', '2023-12-05 16:00:00', 32, 14),
    ('2023-12-06 12:00:00', '2023-12-06 13:30:00', 33, 14),
    ('2023-12-07 09:00:00', '2023-12-07 10:30:00', 34, 15),
    ('2023-12-08 08:00:00', '2023-12-08 09:00:00', 35, 15),
    ('2023-12-09 10:30:00', '2023-12-09 11:30:00', 36, 16),
    ('2023-12-10 22:00:00', '2023-12-10 23:00:00', 37, 16),
    ('2023-12-11 20:00:00', '2023-12-11 21:00:00', 38, 17),
    ('2023-12-12 16:00:00', '2023-12-12 17:30:00', 39, 17),
    ('2023-12-13 14:00:00', '2023-12-13 15:30:00', 40, 18),
    ('2023-12-14 18:00:00', '2023-12-14 19:00:00', 41, 18),
    ('2023-12-15 14:30:00', '2023-12-15 16:00:00', 42, 19),
    ('2023-12-16 12:00:00', '2023-12-16 13:30:00', 43, 19),
    ('2023-12-17 09:00:00', '2023-12-17 10:30:00', 44, 20),
    ('2023-12-18 08:00:00', '2023-12-18 09:00:00', 45, 20),
    ('2023-12-19 10:30:00', '2023-12-19 11:30:00', 46, 21),
    ('2023-12-20 22:00:00', '2023-12-20 23:00:00', 47, 21),
    ('2023-12-21 20:00:00', '2023-12-21 21:00:00', 48, 22),
    ('2023-12-22 16:00:00', '2023-12-22 17:30:00', 49, 22),
    ('2023-12-23 14:00:00', '2023-12-23 15:30:00', 50, 23),
    ('2023-12-24 18:00:00', '2023-12-24 19:00:00', 51, 23)
    ;


INSERT INTO Programs_Genres (番組ID, ジャンルID)
VALUES
    (1, 1),
    (2, 2),
    (3, 3),
    (4, 6),
    (1, 5),
    (5, 4),
    (6, 5),
    (7, 1),
    (8, 2),
    (9, 3),
    (10, 6),
    (11, 4),
    (12, 5),
    (13, 1),
    (14, 2),
    (15, 3),
    (16, 6),
    (17, 4),
    (18, 5),
    (19, 1),
    (20, 2),
    (21, 3),
    (22, 6),
    (23, 4),
    (24, 2),
    (25, 1),
    (26, 5),
    (27, 3),
    (28, 13),
    (29, 4),
    (30, 2),
    (31, 1),
    (32, 2),
    (33, 3),
    (34, 6),
    (35, 20),
    (36, 5),
    (37, 1),
    (38, 2),
    (39, 3),
    (40, 6),
    (41, 4),
    (42, 5),
    (43, 1),
    (44, 2),
    (45, 3),
    (46, 6),
    (47, 4),
    (48, 5),
    (49, 1),
    (50, 2),
    (51, 3),
    (52, 6),
    (53, 4),
    (54, 2),
    (5, 5),
    (6, 7),
    (7, 11),
    (8, 19),
    (9, 13),
    (10, 3),
    (11, 6),
    (12, 7),
    (13, 6),
    (15, 9),
    (16, 13),
    (17, 11),
    (18, 10),
    (19, 13),
    (20, 5),
    (21, 18),
    (22, 16),
    (23, 14),
    (24, 3),
    (25, 5),
    (26, 6),
    (27, 6),
    (28, 2),
    (29, 9)
    ;

INSERT INTO Channels_Slots (チャンネルID, 番組枠ID)
VALUES
    (5, 1),
    (2, 2),
    (3, 3),
    (6, 4),
    (8, 5),
    (6, 6),
    (1, 7),
    (1, 8),
    (9, 9),
    (7, 10),
    (1, 11),
    (4, 12),
    (3, 13),
    (5, 14),
    (7, 15),
    (4, 16),
    (6, 17),
    (7, 18),
    (4, 19),
    (4, 20),
    (6, 21),
    (1, 22),
    (8, 23),
    (9, 24),
    (2, 25),
    (7, 26),
    (5, 27),
    (3, 28),
    (9, 29),
    (5, 30),
    (2, 31),
    (3, 32),
    (4, 33),
    (8, 34),
    (6, 35),
    (1, 36),
    (1, 37),
    (9, 38),
    (7, 39),
    (2, 40),
    (4, 41),
    (6, 42),
    (8, 43),
    (9, 44),
    (1, 45),
    (5, 46),
    (3, 47),
    (1, 48),
    (7, 49),
    (5, 50),
    (2, 51)
    ;





